# SenseBeyond

./: .gitignore  README.md  docker-compose.yml  setup.sh  start.sh
.github/: copilot-instructions.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: csi.py  devices.py  health.py  predictions.py  signal.py  stream.py  training.py
backend/app/core/: config.py  logging.py  state.py
backend/app/infrastructure/: postgres.py  redis_client.py
backend/app/models/: prediction.py
backend/app/repositories/: prediction_repository.py
backend/app/schemas/: csi.py  device.py  health.py  prediction.py  signal.py  training.py
backend/app/services/: device_registry.py  inference_engine.py  metrics.py  prediction_cache.py  preprocessing.py  websocket_manager.py
backend/app/workers/: pipeline.py
backend/scripts/: csi_serial_bridge.py
firmware/: README.md
firmware/esp32-csi-receiver/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-csi-receiver
firmware/esp32-csi-receiver/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  csi_processor.c  csi_processor.h  http_client.c  http_client.h
firmware/esp32-csi-sender/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32-csi-sender
firmware/esp32-csi-sender/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/theme/: index.ts
repo-mirror-backup.git/: config
(+20 files in other folders)
