[project]
name = "csi-backend"
version = "0.1.0"
description = "Real-time WiFi CSI inference backend"
requires-python = ">=3.10"
authors = [{ name = "SenseBeyond Team" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "redis>=5.1.0,<6.0.0",
  "structlog>=24.2.0,<25.0.0",
  "aiofiles>=24.1.0,<25.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.3,<2.0.0",
  "prometheus-client>=0.21.0,<1.0.0",
  "orjson>=3.10.7,<4.0.0",
  "numpy>=2.1.0,<3.0.0",
  "scipy>=1.14.1,<2.0.0",
  "torch>=2.4.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pyserial>=3.5,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "ruff>=0.6.5,<1.0.0",
  "mypy>=1.11.1,<2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
